UI fix on Elevate ForceAdd Spacing

--- a/searchManager/WebContent/css/default.css
+++ b/searchManager/WebContent/css/default.css
@@ -552,3 +552,5 @@ div#bottom-pager-text{ position:relative; top:10px; }
 #rankingRule { margin-top:2px !important; }
 
 .label_condition { display:inline; float:none; }
+
+label.forceAdd{ padding-left: 12px !important;}
